2019-12-11  Luigi Scarso <luigi.scarso@gmail.com>
    * add catcode table check to set_macro (HH)


2019-12-05  Luigi Scarso <luigi.scarso@gmail.com>
    * two fixes for lua user nodes (error report of Sigitas Tolusis <sigitas@vtex.lt> )


2019-11-08  Luigi Scarso <luigi.scarso@gmail.com>
    * record a few more files (in kpse enabled mode) (HH)
    * better recorder code in wrapped lua

2019-11-05  Luigi Scarso <luigi.scarso@gmail.com>
    * fixed calculation of  if (abs(fit_class - fitness(r)) > 1)
      in lineabreak.c (thanks to M. Krüger). This produced different
      results in Windows and Linux.


2019-10-31  Luigi Scarso <luigi.scarso@gmail.com>
    * subfont key in font table (to identify subfint in ttc) plus
      some cleanup (HH)

2019-10-28 Luigi Scarso <luigi.scarso@gmail.com>
    * New callback lua.getcodepage()  for diagnostic purposes.


2019-10-25 Luigi Scarso <luigi.scarso@gmail.com>
    * Also support {oeps.foo} filenames in openin/out


2019-10-22 Luigi Scarso <luigi.scarso@gmail.com>
    *  *** DROPPED  "page_objnum_provider" callback , replaced with "page_order_index" ***


2019-10-18 Luigi Scarso <luigi.scarso@gmail.com>
	* following https://tug.org/pipermail/tlbuild/2019q3/004553.html
          we have now define(__sparc)

2019-10-13 Luigi Scarso <luigi.scarso@gmail.com>
	* additional primitives  \eTeXglue[stretch|shrink]order for querying order the etex way (HH)
	* extra features runtoks (HH)
	* tex.getmodenames() (as these can differ per engine/version) (HH)
	* permit nested runtoks in more complex situations of nesting (HH)
	* more accurate and correct test for tex.[set|get]math
	* minor clean-up and bugs fixed



2019-08-12 Luigi Scarso <luigi.scarso@gmail.com>
	* Support new option --cnf-line from  kapthsea.


2019-07-27 Luigi Scarso <luigi.scarso@gmail.com>
	* Fixed \opein, to be consistent with pdftex in opening
	  a file without extension (but not enclosed in {})

2019-07-06 Luigi Scarso <luigi.scarso@gmail.com>